--- a/app/src/main/res/layout/dialog_goal_overview.xml
+++ b/app/src/main/res/layout/dialog_goal_overview.xml
@@ -29,9 +29,10 @@
             app:layout_constraintTop_toTopOf="@+id/guide_top"
             >
             <TextView
+                android:id="@+id/rv_actions_beschrijving_doel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Beschrijving doel"
+                android:text="@string/beschrijving_doel"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:textColor="#0000FF"
