--- a/app/src/main/res/layout/skyscraper_action_rv_item.xml
+++ b/app/src/main/res/layout/skyscraper_action_rv_item.xml
@@ -16,8 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:background="@drawable/background_action_rv"
-        android:clickable="true"
         android:focusable="true"
+        android:focusableInTouchMode="true"
         android:inputType="text"
         android:autofillHints="@string/beschrijving_actie"
         android:hint="@string/beschrijving_actie"
