--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,6 +91,20 @@
         <item name="iconGravity">textStart</item>
     </style>
 
+    <style name="faith_small_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
+        <item name="android:layout_height">44dp</item>
+        <item name="android:elevation">2dp</item>
+        <item name="android:textAppearance">@style/AppTheme.Button</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/color_white</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="iconTint">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="iconGravity">textStart</item>
+    </style>
+
+
     <style name="faith_calendar_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
      <item name="shapeAppearance">@style/CalendarShapeAppearance</item>
         <item name="android:textColor">@color/black</item>
@@ -98,6 +112,7 @@
         <item name="iconGravity">textStart</item>
         <item name="iconTint">@null</item>
     </style>
+
     <style name="CalendarShapeAppearance">
         <item name="cornerSizeBottomLeft">40dp</item>
         <item name="cornerSizeBottomRight">40dp</item>
