--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -125,6 +125,23 @@
                 app:layout_constraintTop_toTopOf="@+id/btn_login_ik_ben_nieuw"
                 app:srcCompat="@drawable/ic_ster" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_feedback"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/general_button_height"
+                android:backgroundTint="@color/color_white"
+                android:gravity="center"
+                android:onClick="@{() -> welcomeViewModel.feedbackButtonClicked()}"
+                android:text="@string/feedback"
+                android:textAppearance="@style/TextAppearance.NavigationButtonSmall"
+                android:textColor="@color/caption"
+                app:cornerRadius="20dp"
+                android:layout_margin="@dimen/margin_medium"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:strokeColor="@color/caption" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ProgressBar
