--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -225,7 +225,7 @@
             android:backgroundTint="@color/color_white"
             android:gravity="center"
             android:onClick="@{() -> cityScreenViewModel.feedbackButtonClicked()}"
-            android:text="@string/feedback"
+            android:text="@string/feedback_kid"
             android:textAppearance="@style/TextAppearance.NavigationButtonSmall"
             android:textColor="@color/caption"
             app:cornerRadius="20dp"
