--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -113,6 +113,7 @@
             android:id="@+id/cinema"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:onClick="@{() -> cityScreenViewModel.onCinemaClicked()}"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/div_botom_horizontal"
             app:layout_constraintEnd_toStartOf="@+id/div_start_vertical"
@@ -121,15 +122,15 @@
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/cinema"
-            android:onClick="@{() -> cityScreenViewModel.onCinemaClicked()}"
             app:srcCompat="@drawable/prev_cinema"
 
-             />
+            />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/park"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:onClick="@{() -> cityScreenViewModel.onParkClicked()}"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/div_botom_horizontal"
             app:layout_constraintEnd_toStartOf="@+id/div_end_vertical"
@@ -138,14 +139,13 @@
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/park"
-            android:onClick="@{() -> cityScreenViewModel.onParkClicked()}"
-            app:srcCompat="@drawable/prev_park"
-             />
+            app:srcCompat="@drawable/prev_park" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/kantoor"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:onClick="@{() -> cityScreenViewModel.onSkyscraperClicked()}"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/div_botom_horizontal"
             app:layout_constraintEnd_toStartOf="@+id/right_margin_vertical"
@@ -154,9 +154,7 @@
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/kantoor"
-            android:onClick="@{() -> cityScreenViewModel.onSkyscraperClicked()}"
-            app:srcCompat="@drawable/prev_kantoor"
-             />
+            app:srcCompat="@drawable/prev_kantoor" />
 
         <ImageView
             android:id="@+id/left_bottom"
@@ -173,6 +171,7 @@
             android:id="@+id/rugzak"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:onClick="@{() -> cityScreenViewModel.onBackpackClicked()}"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/bottom_margin_horizontal"
             app:layout_constraintEnd_toStartOf="@+id/div_end_vertical"
@@ -181,25 +180,22 @@
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/rugzak"
-            android:onClick="@{() -> cityScreenViewModel.onBackpackClicked()}"
-            app:srcCompat="@drawable/prev_rugzak"
-             />
+            app:srcCompat="@drawable/prev_rugzak" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/boomhut"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:onClick="@{() -> cityScreenViewModel.onTreehouseClicked()}"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toTopOf="@+id/bottom_margin_horizontal"
-            android:onClick="@{() -> cityScreenViewModel.onTreehouseClicked()}"
             app:layout_constraintEnd_toStartOf="@+id/right_margin_vertical"
             app:layout_constraintStart_toStartOf="@+id/div_end_vertical"
             app:layout_constraintTop_toTopOf="@+id/div_botom_horizontal"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/boomhut"
-            app:srcCompat="@drawable/prev_boomhut"
-             />
+            app:srcCompat="@drawable/prev_boomhut" />
 
         <ImageView
             android:id="@+id/image_main_avatar"
@@ -222,6 +218,7 @@
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/general_button_height"
+            android:layout_margin="@dimen/margin_medium"
             android:backgroundTint="@color/color_white"
             android:gravity="center"
             android:onClick="@{() -> cityScreenViewModel.feedbackButtonClicked()}"
@@ -229,9 +226,8 @@
             android:textAppearance="@style/TextAppearance.NavigationButtonSmall"
             android:textColor="@color/caption"
             app:cornerRadius="20dp"
-            android:layout_margin="@dimen/margin_medium"
-            app:layout_constraintStart_toStartOf="@id/left_margin_vertical"
             app:layout_constraintBottom_toBottomOf="@id/bottom_margin_horizontal"
+            app:layout_constraintStart_toStartOf="@id/left_margin_vertical"
             app:strokeColor="@color/caption" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
