--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -142,6 +142,23 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:strokeColor="@color/caption" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_bug_report"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/general_button_height"
+                android:backgroundTint="@color/color_white"
+                android:gravity="center"
+                android:onClick="@{() -> welcomeViewModel.reportButtonClicked()}"
+                android:text="@string/report_bug"
+                android:textAppearance="@style/TextAppearance.NavigationButtonSmall"
+                android:textColor="@color/caption"
+                app:cornerRadius="20dp"
+                app:layout_constraintEnd_toEndOf="@id/btn_feedback"
+                app:layout_constraintStart_toStartOf="@id/btn_feedback"
+                app:layout_constraintTop_toBottomOf="@id/btn_feedback"
+                app:strokeColor="@color/caption" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ProgressBar
